# jitsi-meet-qt

./: .gitignore  README.md
JitsiMeetQt/: CMakeLists.txt  JitsiMeetQt_debug_resource.rc  JitsiMeetQt_resource.rc  jitsi-meet-qt.pro  test_main.cpp  test_simple.cpp  test_simple.pro
JitsiMeetQt/include/: ConferenceWindow.h  ConfigurationManager.h  DatabaseManager.h  JitsiMeetAPI.h  LoadingAnimationWidget.h  Logger.h  MainApplication.h  NetworkDiagnostics.h  ProtocolHandler.h  SettingsDialog.h  WelcomeWindow.h
JitsiMeetQt/resources/: resources.qrc  resources_rc.py
JitsiMeetQt/resources/styles/: dark.qss  light.qss  main.qss
JitsiMeetQt/src/: ConferenceWindow.cpp  ConfigurationManager.cpp  DatabaseManager.cpp  JitsiMeetAPI.cpp  LoadingAnimationWidget.cpp  Logger.cpp  MainApplication.cpp  NetworkDiagnostics.cpp  ProtocolHandler.cpp  SettingsDialog.cpp  WelcomeWindow.cpp  main.cpp
jitsi-meet-qt/: .gitignore  CHANGELOG.md  CLEANUP_ANALYSIS.md  CMakeLists.txt  LICENSE  README.md  TASK_54_CLEANUP_SUMMARY.md  build.bat  build_auth_test.bat  build_auth_verify.bat  build_config_test.bat  build_error_core.bat  build_error_integration_test.bat  build_error_simple.bat  build_error_test_simple.bat  build_existing_error_test.bat  build_integration_test.bat  build_performance_test.bat  build_protocol_demo.bat  build_screen_share_test.bat  build_settings_test.bat  build_settings_verify.bat  build_simple_performance_test.bat  build_simple_test.bat  build_theme_test.bat  build_translation_test.bat  build_translation_unit.bat  build_translation_verify.bat  build_translations.bat  build_unit_test.bat  build_unit_tests.bat  build_verify_resources.bat  build_verify_unit_tests.bat  build_welcome_test.bat  build_window_manager_test.bat  build_window_manager_verify.bat  configure.bat  demo_protocol_handler.cpp  deploy-advanced.bat  deploy.bat  (+93 more)
jitsi-meet-qt/build_auth_test/: build_auth_test.pro
jitsi-meet-qt/build_error_integration/: test_error_integration.pro
jitsi-meet-qt/build_translation_verify/: build_translation_verify.pro
jitsi-meet-qt/build_window_verify/: build_window_verify.pro
jitsi-meet-qt/cmake/: MinGW-toolchain.cmake
jitsi-meet-qt/deploy/: deploy.cmake.in
jitsi-meet-qt/examples/: application_flow_demo.cpp  authentication_manager_demo.cpp  chat_manager_demo.cpp  complete_integration_test.cpp  conference_window_demo.cpp  configuration_manager_demo.cpp  error_handling_integration.cpp  integration_verification.cpp  media_manager_demo.cpp  performance_benchmark.cpp  performance_optimization_complete.cpp  protocol_handler_demo.cpp  screen_share_manager_demo.cpp  simple_config_test.cpp  webrtc_integration_demo.cpp
jitsi-meet-qt/include/: AuthenticationManager.h  ChatManager.h  ConferenceManager.h  ConferenceWindow.h  ConfigurationManager.h  ErrorDialog.h  ErrorEventBus.h  ErrorLogger.h  ErrorRecoveryManager.h  ErrorUtils.h  ILogger.h  JitsiConstants.h  JitsiError.h  LogMacros.h  Logger.h  MainApplication.h  MediaManager.h  MediaPerformanceOptimizer.h  MemoryLeakDetector.h  MemoryProfiler.h  ModuleError.h  NavigationBar.h  NetworkOptimizer.h  OptimizedRecentManager.h  PerformanceConfig.h  PerformanceIntegration.h  PerformanceManager.h  ProtocolHandler.h  RecentListWidget.h  ScreenShareManager.h  SettingsDialog.h  StartupOptimizer.h  StyleHelper.h  StyleUtils.h  ThemeManager.h  TranslationManager.h  WebRTCEngine.h  WelcomeWindow.h  WindowManager.h  WindowStateManager.h  (+2 more)
jitsi-meet-qt/include/models/: ApplicationSettings.h  RecentItem.h
jitsi-meet-qt/modules/: BUILD_SYSTEM_README.md  USAGE_GUIDE.md  build_config.json  build_optimization.json  build_system.py  conditional_compilation.pri  dynamic_loading.pri  module_template.pri  module_version.pri  modules.pri  modules_README.md  modules_optimized.pri  modules_safe.pri  packaging.pri
jitsi-meet-qt/modules/audio/: CMakeLists.txt  README.md  audio.pri  audio_README.md
jitsi-meet-qt/modules/camera/: CMakeLists.txt  camera.pri  camera_README.md
jitsi-meet-qt/modules/chat/: CMakeLists.txt  chat.pri  chat_README.md
jitsi-meet-qt/modules/compatibility/: CMakeLists.txt  PROGRESSIVE_REPLACEMENT_GUIDE.md  README.md  compatibility.pri
jitsi-meet-qt/modules/core/: CMakeLists.txt  README.md  core.pri
jitsi-meet-qt/modules/meeting/: CMakeLists.txt  README.md  meeting.pri  test_handlers_models.cpp  (+1 more)
jitsi-meet-qt/resources/: .gitkeep  README.md  app.manifest  app.rc  app.rc.in  manifest.xml  resources.qrc  resources.rcc  resources_rc.py  windows.rc
jitsi-meet-qt/src/: AuthenticationManager.cpp  ChatManager.cpp  ConferenceManager.cpp  ConferenceWindow.cpp  ConfigurationManager.cpp  ErrorDialog.cpp  ErrorEventBus.cpp  ErrorLogger.cpp  ErrorRecoveryManager.cpp  ErrorUtils.cpp  JitsiConstants.h  JitsiError.cpp  Logger.cpp  MainApplication.cpp  MediaManager.cpp  MediaPerformanceOptimizer.cpp  MemoryLeakDetector.cpp  MemoryProfiler.cpp  ModuleError.cpp  NavigationBar.cpp  NetworkOptimizer.cpp  OptimizedRecentManager.cpp  PerformanceConfig.cpp  PerformanceIntegration.cpp  PerformanceManager.cpp  ProtocolHandler.cpp  RecentListWidget.cpp  ScreenShareManager.cpp  SettingsDialog.cpp  StartupOptimizer.cpp  StyleHelper.cpp  StyleUtils.cpp  ThemeManager.cpp  TranslationManager.cpp  WebRTCEngine.cpp  WelcomeWindow.cpp  WindowManager.cpp  WindowStateManager.cpp  XMPPClient.cpp  main.cpp
jitsi-meet-qt/test_config_cmake/: CMakeLists.txt
jitsi-meet-qt/tests/: CMakeLists.txt  test_MainApplication.cpp  test_authentication_manager.cpp  test_chat_manager.cpp  test_conference_manager.cpp  test_conference_window.cpp  test_configuration.cpp  test_configuration.pro  test_configuration_manager.cpp  test_error_handling.cpp  test_integration.cpp  test_main.cpp  test_media_manager.cpp  test_models.cpp  test_navigationbar.cpp  test_performance.cpp  test_protocol_handler.cpp  test_protocolhandler.cpp  test_recentlist.cpp  test_recentlist.pro  test_screen_share_manager.cpp  test_webrtc_engine.cpp  test_welcomewindow.cpp  test_windowmanager.cpp  test_windowstatemanager.cpp  test_xmpp_client.cpp
jitsi-meet-qt/tools/: version_control.py
(+634 files in other folders)
